fixed swagger and the pipeline aggregatio query
